# 3009

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  check_deps.ps1  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: README.en.md  README.es.md
src/core/: __init__.py  access_control.py  camera.py  config.py  database.py  platform_utils.py  qr_handler.py
src/ui/: __init__.py  admin_dialog.py  main_window.py  styles.py
tests/: test_access_control.py  test_database.py  test_imports.py  test_platform_utils.py  test_qr_handler.py  test_tools.py  test_ui_camera.py
tools/: backup_db.py  check_format.py  export_logs.py  generate_qr.py  init_app.py
