[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qr-access-control"
version = "1.1.0"
description = "Official U-Sarnt desktop QR-based access control system with signed credentials, admin tools and audit logs."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "U-Sarnt" }
]
maintainers = [
  { name = "U-Sarnt" }
]
license = { text = "Proprietary - Copyright (c) U-Sarnt. All rights reserved." }
keywords = ["u-sarnt", "qr", "access-control", "desktop", "security", "qt"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: Other/Proprietary License",
  "Natural Language :: English",
  "Natural Language :: Spanish",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = [
  "opencv-python>=4.8.0",
  "sqlalchemy>=2.0.0",
  "PySide6>=6.5.0",
  "qrcode[pil]>=7.4.0",
  "Pillow>=10.0.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core", "core.*", "ui", "ui.*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
